# attrib

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
benchmarks/: attrib_example.py  attrs_example.py  dataclasses_example.py  main.py  utils.py
examples/: adapter.py  attrib_.py  attrib_example.py  attrs_.py  attrs_example.py  dataclass_.py  dataclass_example.py  main.py  mock_data.py  pydantic_example.py  type_adapter.py  utils.py
src/attrib/: __init__.py  _field.py  _typing.py  _utils.py  adapters.py  contextmanagers.py  dataclass.py  dataclasses.py  decorators.py  descriptors.py  exceptions.py  fields.py  nested.py  serializers.py  types.py  validators.py
src/attrib/adapters/: __init__.py  _concrete.py  _generics.py  base.py
src/attrib/descriptors/: base.py  colors.py  datetime.py  nested.py  networks.py  phonenumbers.py  quantities.py  urls.py
tests/: conftest.py  test_dataclass.py  test_decorators.py  test_exceptions.py  test_field.py  test_serializers.py  test_utils.py  test_validators.py
tests/adapters/: test_base.py
