[project]
name = "attrib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "typing-extensions>=4.13.2",
    "backports.zoneinfo; python_version < '3.9'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
