[project]
name = "attrib"
version = "0.0.1a0"
description = "Just another data description library."
readme = "README.md"
authors = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "typing-extensions>=4.13.2",
    "backports.zoneinfo; python_version < '3.9'"
]

[project.optional-dependencies]
phonenumbers = [
    "phonenumbers>=9.0.4",
]
quantities = [
    "quantities>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "backports-zoneinfo>=0.2.1 ; python_full_version < '3.9'",
    "cattrs==24.1.3",
    "exceptiongroup==1.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "numpy>=1.24.4",
    "orjson>=3.10.15",
    "phonenumbers==9.0.4",
    "psutil==7.0.0",
    "pydantic>=1.0.0",
    "pydantic-core>=1.0.0",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "quantities>=0.16.0",
    "rich==14.0.0",
    "ruff==0.11.12",
    "six==1.17.0",
    "typing-extensions>=4.13.2",
    "urllib3>=2.2.3",
    "line-profiler>=4.2.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = []
testpaths = ["tests"]
pythonpath = "src"


