[project]
name = "attrib"
version = "0.0.1a0"
description = "Just another data description library."
readme = "README.md"
authors = [
    { name = "tioluwa", email = "tioluwa.dev@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "annotated-types>=0.7.0",
    "typing-extensions>=4.13.2",
    "backports.zoneinfo; python_version < '3.9'"
]

[project.optional-dependencies]
phonenumbers = [
    "phonenumbers>=9.0.4",
]
quantities = [
    "quantities>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "backports-zoneinfo>=0.2.1 ; python_full_version < '3.9'",
    "cattrs==24.1.3",
    "exceptiongroup==1.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "numpy>=1.24.4",
    "orjson>=3.10.15",
    "phonenumbers==9.0.4",
    "psutil==7.0.0",
    "pydantic>=1.0.0",
    "pydantic-core>=1.0.0",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "quantities>=0.16.0",
    "rich==14.0.0",
    "ruff==0.11.12",
    "six==1.17.0",
    "typing-extensions>=4.13.2",
    "urllib3>=2.2.3",
    "pytest>=8.3.5",
    "tzdata>=2025.2",
    "click>=8.1.8",
]

[tool.pytest.ini_options]
addopts = []
testpaths = ["tests"]
pythonpath = "src"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
